// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: rgb(211,211,211);
  cursor: pointer;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  color: black;
  touch-action: manipulation;
}

.c0:focus {
  outline: none;
}

.c0:hover,
.c0:active {
  outline: none;
}

<button
  class="c0"
  type="button"
>
  foo
</button>
`;

exports[`renders DecoyButton 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: rgb(211,211,211);
  cursor: pointer;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  color: black;
  touch-action: manipulation;
}

.c0:focus {
  outline: none;
}

.c0:hover,
.c0:active {
  outline: none;
}

<div
  class="c0"
>
  DecoyButton
</div>
`;

exports[`renders big Button 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: rgb(211,211,211);
  cursor: pointer;
  padding: 1rem 1.75rem;
  line-height: 1.25;
  color: black;
  font-size: 1.25rem;
  touch-action: manipulation;
}

.c0:focus {
  outline: none;
}

.c0:hover,
.c0:active {
  outline: none;
}

<button
  class="c0"
  type="button"
>
  I’m a big button!
</button>
`;

exports[`renders danger Button 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: red;
  cursor: pointer;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  color: #FFFFFF;
  touch-action: manipulation;
}

.c0:focus {
  outline: none;
}

.c0:hover,
.c0:active {
  outline: none;
}

<button
  class="c0"
  type="button"
>
  Danger!
</button>
`;

exports[`renders primary Button 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: rgb(71,167,75);
  cursor: pointer;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  color: #FFFFFF;
  touch-action: manipulation;
}

.c0:focus {
  outline: none;
}

.c0:hover,
.c0:active {
  outline: none;
}

<button
  class="c0"
  type="button"
>
  Primary
</button>
`;

exports[`renders small Button 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: rgb(211,211,211);
  cursor: pointer;
  padding: 0.35rem 0.5rem;
  line-height: 1.25;
  color: black;
  touch-action: manipulation;
}

.c0:focus {
  outline: none;
}

.c0:hover,
.c0:active {
  outline: none;
}

<button
  class="c0"
  type="button"
>
  I’m a small button!
</button>
`;
